[package]
name = "ringtactoe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.macroquad]
version = "0.3.8"
# Cross compiling sound from mac is broken until they release the next version.
default-features = false
